src/test/deca/syntax/invalid/homemade/test/test_pars_inv_intruction_inequality_expr_oubli_expr1_sup_egal.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les inequality_expr
//
// Resultats:
//    Ligne 11 : Erreur ( oubli expr1)
//    
//
// Historique:
//    cree le 04/01/2023
{
    >= expression_bidon1;
}
